<resources>
    <string name="app_name">PMSystem</string>
    <string name="menu_homepage">主页</string>
    <string name="menu_attendance">考勤</string>
    <string name="menu_system">我的</string>

    <!--主页模块-->
    <string name="employee_info">员工信息</string>
    <string name="company_evaluation">公司评价</string>
    <string name="details_title">详细信息</string>
    <string name="data_error">数据解析错误</string>
    <string name="recruitment_manage">招聘管理</string>


    <!--考勤模块-->
    <string name="sign_in_success">签到成功</string>
    <string name="sign_out_success">签退成功</string>

    <!--我的模块-->
    <string name="my_info">我的信息</string>
    <string name="my_salary">我的工资</string>
    <string name="my_attendance">我的考勤</string>
    <string name="setting">设置</string>

    <!--工资详情-->
    <string name="base_salary">基本工资</string>
    <string name="job_subsidies">岗位津贴</string>
    <string name="total_salary">工资总额</string>
    <string name="sick_leave">事病假</string>
    <string name="other_subsidies">其他补助</string>
    <string name="individual_income_tax">个税</string>
    <string name="annuity">养老金</string>
    <string name="accumulation_fund">公积金</string>
    <string name="actual_income">实际收入</string>

    <!--员工信息：头像、姓名、性别、职工号、生日、学历、工资、住址、电话、邮箱、所属部门-->
    <string name="employee_name">姓名</string>
    <string name="employee_sex">性别</string>
    <string name="employee_number">职工号</string>
    <string name="employee_birthday">生日</string>
    <string name="employee_education">学历</string>
    <string name="employee_salary">工资</string>
    <string name="employee_address">住址</string>
    <string name="employee_phone">电话</string>
    <string name="employee_email">邮箱</string>
    <string name="employee_department">所属部门</string>

    <!--公司评价-->
    <string name="my_evaluation">我的评价：</string>
    <string name="hint_evaluation">请输入您的评价！</string>
    <string name="my_contact">联系方式：</string>
    <string name="hint_contact">请输入您的联系方式！</string>
    <string name="submit">提交</string>

    <!-- Strings related to login and register-->
    <string name="prompt_account">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_again">重复密码</string>
    <string name="prompt_verification_code">验证码</string>
    <string name="prompt_identity">您的身份</string>
    <string name="prompt_next_step">下一步</string>
    <string name="prompt_register">注册</string>

    <string name="option_remember_password">记住密码</string>

    <string name="hint_verification_code">请输入验证码</string>
    <string name="hint_account">请输入账号</string>
    <string name="hint_create_password">6~20位数字或字母</string>
    <string name="hint_password_again">请重复一次密码</string>

    <string name="action_login">登陆</string>
    <string name="action_forget_password">忘记密码？</string>
    <string name="action_verification_code">发送验证码</string>

    <string name="choose_find_teacher">找家教</string>
    <string name="choose_do_teacher">做家教</string>

    <string name="error_invalid_account">账户名称不合法</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请填写此信息</string>

    <string name="check_agreement">我已经阅读并同意协议</string>
</resources>
