<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mrtian.project.ui.view.login.RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!--用户名-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/item_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_Account"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:background="@color/color_white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/padding"
                android:text="@string/prompt_account"
                android:textSize="@dimen/font_size_middle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/activity_register_cutline" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:background="@color/color_white"
                android:hint="@string/hint_account"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/font_size_middle" />
        </LinearLayout>

        <!--验证码-->
        <LinearLayout
            android:id="@+id/ll_VerificationCode"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="1dp"
            android:background="@drawable/color_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_VerificationCode"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:background="@color/color_white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/padding"
                android:text="@string/prompt_verification_code"
                android:textSize="@dimen/font_size_middle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/activity_register_cutline" />

            <EditText
                android:id="@+id/et_VerificationCode"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:background="@color/color_white"
                android:hint="@string/hint_verification_code"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/font_size_middle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/action_verification_code"
                android:textSize="@dimen/font_size_middle"
                android:id="@+id/textView4" />

        </LinearLayout>

        <!--密码-->
        <LinearLayout
            android:id="@+id/ll_Password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="1dp"
            android:visibility="gone"
            android:background="@drawable/activity_register_inputbox"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_Password"
                android:layout_width="@dimen/zero"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:background="@drawable/activity_register_inputbox"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/padding"
                android:text="@string/prompt_password"
                android:textSize="@dimen/font_size_middle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/activity_register_cutline" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/zero"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:background="@drawable/activity_register_inputbox"
                android:hint="@string/hint_create_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/font_size_middle" />
        </LinearLayout>

        <!--同意协议-->
        <CheckBox
            android:id="@+id/cb_Agreement"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:button="@drawable/checkbox_white"
            android:checked="false"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/check_agreement"
            android:textSize="@dimen/font_size_middle" />

        <!--注册按钮-->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:text="@string/prompt_next_step"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
