<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_salary_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.mrtian.project.ui.view.systemsetting.DetailSalaryInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="2017.05.05"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_base_salary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/base_salary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_base_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_base_salary_title"
                    android:layout_centerHorizontal="true"
                    android:text="1000"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_job_subsidies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/job_subsidies"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_job_subsidies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_job_subsidies_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_total_salary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/total_salary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_total_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_total_salary_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_sick_leave_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/sick_leave"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_sick_leave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_sick_leave_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_other_subsidies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/other_subsidies"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_other_subsidies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_other_subsidies_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_individual_income_tax_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/individual_income_tax"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_individual_income_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tv_individual_income_tax_title"
                    android:layout_alignBottom="@+id/tv_individual_income_tax_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_annuity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/annuity"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_annuity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_annuity_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"

                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_accumulation_fund_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/accumulation_fund"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_accumulation_fund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_accumulation_fund_title"
                    android:layout_centerHorizontal="true"
                    android:text="100"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_actual_income_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/actual_income"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_actual_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_actual_income_title"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/tv_actual_income_title"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
